--- a/kernel-config/release/general/config-6.1
+++ b/kernel-config/release/general/config-6.1
@@ -3164,6 +3164,7 @@ CONFIG_WLAN_VENDOR_REALTEK=y
 CONFIG_RTL8180=m
 CONFIG_RTL8187=m
 CONFIG_RTL8187_LEDS=y
+CONFIG_RTL8189FS=m
 CONFIG_RTL_CARDS=m
 CONFIG_RTL8192CE=m
 CONFIG_RTL8192SE=m
